--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,30 +1,31 @@
-$iconSpritePath: "../images/glyphicons-halflings.png";
-$iconWhiteSpritePath: "../images/glyphicons-halflings-white.png";
-
-@import "bootstrap-sass/lib/bootstrap";
+@import "compass";
+@import "normalize";
+@import "variables";
 
 /* Put your CSS here */
 html, body {
-  margin: 0;
+	margin: 0;
 }
 
 body {
-    background: #fafafa;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #333;
+	background: #fafafa;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	color: #333;
 }
 .container {
   width: 100%;
 }
 ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	@extend .clearfix;
 
   li {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
+  	display: block;
+  	float: left;
+  	height: 500px;
+	width: 50%;
+	background-size: cover;
   }
 }
