--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,9 @@
 <ul>
     <li ng-repeat="venue in venues" style="background-image: url('{{venue.photo.url}}')">
-        <h1>{{venue.name}}</h1>
-        <p>{{venue.tip.text}}
+    	<div class="cover"></div>
+    	<section class="venue-description">
+	        <h1>{{venue.name}}</h1>
+	        <p class="tip">{{venue.tip.text}}</p>
+        </section>
     </li>
 </ul>
