--- a/app/styles/_slider.scss
+++ b/app/styles/_slider.scss
@@ -59,16 +59,15 @@ ul {
         letter-spacing: .1em;
 		
 		&:after {
-			content: "";
-			display: block;
+			content: ". . .";
+			text-align: center;
+			display: inline-block;
 			position: absolute;
-			left: 0;
+			left: 50%;
+			margin-left: -50px;
 			bottom: -10px;
-			background: #fff;
-			width: 100%;
-			height: 1px;
-			-webkit-box-shadow:  1px 1px 1px 0px rgba(0, 0, 0, .8);
-        	box-shadow:  1px 1px 1px 0px rgba(0, 0, 0, .8);
+			width: 100px;
+			font-size: 0.15em;
 
 		}
 	}
