--- a/app/views/smallPhoto.html
+++ b/app/views/smallPhoto.html
@@ -1,8 +1,8 @@
-<div class="tpl small-photo" ng-click="changeTemplate()">
+<div class="tpl small-photo">
 	<div class="cover-image" style="background-image: url({{venue.photo.url}});">
 		<div class="cover"></div>
 	</div>
-    
+
     <section class="venue-description">
         <h1>{{venue.name}}</h1>
         <p class="tip">{{venue.tip.text}}</p>
