--- a/app/styles/_slider.scss
+++ b/app/styles/_slider.scss
@@ -1,36 +1,7 @@
-.ng-hide,
-.ng-show {
-    display: block!important;
-}
 ul {
 	list-style: none;
-	padding: 0;
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-
-    li {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        margin: auto;
-        -webkit-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0);
-        -webkit-transition: all 0.5s ease-in-out;
-        transition: all 0.5s ease-in-out;
-        overflow: hidden;
-
-        &.hidden {
-            -webkit-transition: all 0.5s ease-in-out;
-            transition: all 0.5s ease-in-out;
-            -webkit-transform: translate3d(-100%, 0, 0);
-            transform: translate3d(-100%, 0, 0);
-        }
-    }
+    margin: 0;
+    padding: 0;
 }
 
 .tpl {
@@ -170,5 +141,71 @@ ul {
 		}
 	}
 }
+body {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+}
+.container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.venues {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.venue {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    &.ng-hide {
+        display: block !important;
+        left: 100%;
+    }
+    &.ng-hide-remove,
+    &.ng-hide-add
+    {
+        -webkit-transition: 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+        -moz-transition: 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+        -ms-transition: 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+        -o-transition: 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+        transition: 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    }
 
+    &.ng-hide-remove {
+        left: 100%;
+        &.ng-hide-remove-active {
+            left: 0;
+        }
+    }
+
+    &.ng-hide-add {
+        left: 0;
+        &.ng-hide-add-active{
+            left: -100%;
+        }
+    }
+}
+.backward {
+    .venue {
+        &.ng-hide {
+            left: 100%;
+        }
+        &.ng-hide-remove {
+            left: -100%;
+            &.ng-hide-remove-active {
+                left: 0;
+            }
+        }
+
+        &.ng-hide-add {
+            left: 0;
+            &.ng-hide-add-active{
+                left: 100%;
+            }
+        }
+    }
+}
 
