Added intro page

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,8 +1,10 @@
 @import "compass";
 @import "normalize";
 @import "variables";
+@import "mixins";
 @import "common";
 @import "slider";
+@import "intro";
 
 /* Here we import all jebane sass files */
 
