--- a/app/views/intro.html
+++ b/app/views/intro.html
@@ -7,6 +7,7 @@
                 <input type="text" placeholder="eg. Warszawa" />
                 <input type="submit" value="Go there!" />
             </form>
+            <a class="found-city" href="#/board">Gdańsk <span>your current location</span></a>
         </div>
     </div>
 </section>
