--- a/app/styles/_slider.scss
+++ b/app/styles/_slider.scss
@@ -182,6 +182,21 @@ body {
             top: -100%;
         }
     }
+    &.up {
+        &.ng-hide-remove {
+            top: -100%;
+            &.ng-hide-remove-active {
+                top: 0;
+            }
+        }
+
+        &.ng-hide-add {
+            top: 0;
+            &.ng-hide-add-active{
+                top: 100%;
+            }
+        }
+    }
 }
 .venue {
     position: absolute;
