--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
-<ul ng-repeat="venues in venuesSections" class="venues {{venues.name}}" ng-class="{'forward': isForward, 'backward': isBack}" ng-show="venues.current">
+<ul ng-repeat="venues in venuesSections" class="venues {{venues.name}}" ng-class="{'forward': isForward, 'backward': isBack, 'up': isUp, 'down': isDown}" ng-show="venues.current">
     <li class="venue" ng-repeat="venue in venues.venues" ng-show="venue.current" ng-click="getNextVenue(venues.name, $index)">
         <div ng-include="venue.template.url"></div>
     </li>
