--- a/app/styles/_intro.scss
+++ b/app/styles/_intro.scss
@@ -35,7 +35,7 @@
             width: 100%;
             height: 100%;
             @include opacity(0.85);
-            @extend .vigniette;
+            @extend .vignette;
         }
     }
 
@@ -169,8 +169,8 @@
             background-image: url(../images/overlay.png), -ms-linear-gradient(top,  rgba(195,242,41,1) 0%,rgba(171,220,40,1) 100%); /* IE10+ */
             background-image: url(../images/overlay.png), linear-gradient(to bottom,  rgba(195,242,41,1) 0%,rgba(171,220,40,1) 100%); /* W3C */
             filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c3f229', endColorstr='#abdc28',GradientType=0 ); /* IE6-8 */
-            text-shadow: 0px 1px 1px #000000;
-            filter: dropshadow(color=#000000, offx=0, offy=1);
+            text-shadow: 0px 1px 1px #4D7516;
+            filter: dropshadow(color=#4D7516, offx=0, offy=1);
             @include border-radius(3px);
             @include transition(all 0.2s ease-in-out);
 
@@ -194,10 +194,14 @@
                 border-style: solid;
                 border-width: 15px 10px 0 10px;
                 border-color: #abdc28 transparent transparent transparent;
+                @include transition(all 0.2s ease-in-out);
             }
 
             &:hover {
                 @include opacity(0.9);
+                &:after {
+                    @include opacity(0.9);
+                }
             }
         }
 
