--- a/app/styles/_slider.scss
+++ b/app/styles/_slider.scss
@@ -140,6 +140,178 @@ ul {
 			}
 		}
 	}
+
+    &.category {
+        .cover-image {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 60%;
+            height: 100%;
+            background-repeat: none;
+            background-position: center center;
+            background-size: cover;
+        }
+
+        .top-pick-venue {
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 40%;
+            height: 100%;
+            @extend .light-bg;
+            @include box-sizing();
+            padding: 30px;
+
+            .location-map {
+                position: absolute;
+                bottom: 0;
+                right: 0;
+                width: 100%;
+                height: 200px;
+                background-repeat: none;
+                background-position: center center;
+                background-size: cover;
+                border-top:1px solid $gray;
+
+                .location-details {
+                    position: absolute;
+                    top: 0;
+                    bottom: 0;
+                    left: 0;
+                    right: 0;
+                    width: 100%;
+                    height: 100%;
+                    display: table;
+                    > div {
+                        display: table-cell;
+                        vertical-align: middle;
+                        > div {
+                            margin: 0 30px;
+                            background: rgba(255, 255, 255, 0.75);
+                            border: 1px solid $gray;
+                            text-align: center;
+                            padding: 20px 10px 10px 10px;
+                            position: relative;
+                            p{
+                                font-family: $sans;
+                                font-size: 1.6em;
+                                margin: 5px;
+                            }
+
+                            &:after {
+                                content: "";
+                                background: #fff url(../images/location.png) center center no-repeat;
+                                border: 1px solid $gray;
+                                @include border-radius(50%);
+                                position: absolute;
+                                width: 30px;
+                                height: 30px;
+                                top: -15px;
+                                left: 50%;
+                                margin-left: -15px;
+                            }
+                        }
+                    }
+                }
+            }
+
+            header {
+                position: relative;
+                height: 60px;
+
+                &:after {
+                    content: "";
+                    position: absolute;
+                    width: 100%;
+                    height: 1px;
+                    background: $dark;
+                    top: 50%;
+                    left: 0;
+                    z-index: 1;
+                }
+
+                .badge {
+                    @include border-radius(50%);
+                    background: #fff;
+                    width: 60px;
+                    height: 60px;
+                    border: 1px solid $dark;
+                    margin: 0 auto;
+                    position: relative;
+                    z-index:2;
+
+                    > div {
+                        @include border-radius(50%);
+                        width: 52px;
+                        height: 52px;
+                        background-color: $dark;
+                        position: relative;
+                        top: 4px;
+                        left: 4px;
+                    }
+                }
+            }
+
+            h2 {
+                text-align: center;
+                font-size: 5em;
+                color: $dark;
+                font-weight: bold;
+                font-family: $amatic;
+                margin: 10px 0;
+            }
+
+            .tip {
+                color: $gray;
+                font-size: 1.8em;
+                font-weight: 100;
+                text-align: justify;
+                display: block;
+                margin: 0 20px;
+                font-family: $source;
+            }
+        }
+
+        .category-name {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            display: table;
+            @extend .vignette2;
+
+            header {
+                text-align: center;
+                padding: 0 20px;
+                display: table-cell;
+                vertical-align: middle;
+                @include opacity(0.8);
+            }
+
+            h1 {
+                color: #fff;
+                font-size: 9em;
+                font-family: $sixcaps;
+                text-transform: uppercase;
+                line-height: 1;
+                margin: 0;
+            }
+
+            h3 {
+                color: #fff;
+                font-size: 1.6em;
+                font-weight: normal;
+                margin: 10px 0 0 0;
+                padding: 10px 5px 0 5px;
+                font-family: $lora;
+                display: inline-block;
+                border-top: 1px solid #fff;
+
+            }
+        }
+    }
 }
 body {
     position: fixed;
