--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -7,8 +7,19 @@ $lora: "Lora", serif;
 $sixcaps: "Six Caps", sans-serif;
 $nunito: "Nunito", sans-serif;
 $amatic: "Amatic SC", cursive;
-$bebas: 'bebas_neueregular', sans-serif;
-$journal: 'journalregular', serif;
+$bebas: "bebas_neueregular", sans-serif;
+$journal: "journalregular", serif;
+
+$niconne: "Niconne", cursive;
+$gudea: "Gudea", sans-serif;
+$marck: "Marck Script", cursive;
+$patrick: "Patrick Hand SC", cursive;
+$clicker: "Clicker Script", cursive;
+$garamond: "EB Garamond", serif;
+$yanone: "Yanone Kaffeesatz", sans-serif;
+$englebert: "Englebert", sans-serif;
+$oregano: "Oregano", cursive;
+$shadows: "Shadows Into Light Two", cursive;
 
 /* ***** RWD ***** */
 
