--- a/app/styles/_intro.scss
+++ b/app/styles/_intro.scss
@@ -25,6 +25,15 @@
         background-repeat: no-repeat;
         background-position: center center;
         background-size: cover;
+        -webkit-backface-visibility: hidden;
+        @include filter(contrast(150%) blur(3px) grayscale(100%));
+        @extend .animated;
+        animation-delay: 3s;
+        -webkit-animation-delay: 3s;
+
+        &:hover {
+
+        }
 
         &:after {
             content: "";
@@ -34,7 +43,7 @@
             top: 0;
             width: 100%;
             height: 100%;
-            @include opacity(0.85);
+            @include opacity(0.75);
             @extend .vignette;
         }
     }
@@ -44,6 +53,8 @@
         height: 40%;
         top: 1%;
         left: 1%;
+
+
     }
 
     .cat1 {
