--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,6 +3,7 @@
 @import "fonts";
 @import "variables";
 @import "mixins";
+@import "animations";
 @import "common";
 @import "slider";
 @import "intro";
