Added search method for api

--- a/app/views/category.html
+++ b/app/views/category.html
@@ -4,7 +4,7 @@
         </section>
         <div class="category-name">
             <header>
-                <h1>{{venue.category.sectionName}}</h1>
+                <h1>{{venue.category.categoryParentName}}</h1>
                 <h3>in {{venue.location.city}}</h3>
             </header>
         </div>
