Added geolocation service and geocoding current position + navigation menu container

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,9 +4,11 @@
 @import "variables";
 @import "mixins";
 @import "animations";
+@import "widgets";
 @import "common";
 @import "slider";
 @import "intro";
+@import "nav";
 
 /* Here we import all jebane sass files */
 
