--- a/app/styles/_intro.scss
+++ b/app/styles/_intro.scss
@@ -1,5 +1,4 @@
 .intro {
-
     position: absolute;
     top: 0;
     bottom: 0;
@@ -26,14 +25,10 @@
         background-position: center center;
         background-size: cover;
         -webkit-backface-visibility: hidden;
-        @include filter(contrast(150%) blur(3px) grayscale(100%));
+        @include filter(contrast(110%) blur(1px) grayscale(100%));
         @extend .animated;
         animation-delay: 3s;
         -webkit-animation-delay: 3s;
-
-        &:hover {
-
-        }
 
         &:after {
             content: "";
@@ -53,8 +48,6 @@
         height: 40%;
         top: 1%;
         left: 1%;
-
-
     }
 
     .cat1 {
@@ -183,6 +176,7 @@
             text-shadow: 0px 1px 1px #4D7516;
             filter: dropshadow(color=#4D7516, offx=0, offy=1);
             @include border-radius(3px);
+            @include opacity(0);
             @include transition(all 0.2s ease-in-out);
 
             span {
@@ -214,8 +208,10 @@
                     @include opacity(0.9);
                 }
             }
+
+            &.isCity {
+                @include opacity(1);
+            }
         }
-
     }
-
 }
