Added searching for particular city on intro page, storing location data in local storage

--- a/app/views/category.html
+++ b/app/views/category.html
@@ -21,7 +21,7 @@
             <span style="width: {{venue.rating.percentage}};"></span>
         </span>
         <p class="tip">{{venue.tip.text}}</p>
-        <div class="location-map" style="background-image: url('{{venue.location.url}}')">
+        <div class="location-map" ng-if="venue.location.url" style="background-image: url('{{venue.location.url}}')">
             <div class="location-details">
                 <div>
                     <div>
