--- a/app/views/intro.html
+++ b/app/views/intro.html
@@ -3,8 +3,8 @@
     </div>
     <div class="container">
         <div class="further-action">
-            <form action="/" method="POST">
-                <input type="text" placeholder="eg. Warszawa" />
+            <form ng-submit="onSubmit($event)">
+                <input type="text" placeholder="eg. Warszawa" ng-model="city" />
                 <input type="submit" value="Go there!" />
             </form>
             <a class="found-city" href="#/board" ng-class="{isCity: geo.isCity}">{{geo.cityName}} <span>your current location</span></a>
