--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -28,6 +28,14 @@ ul {
     margin: 0;
 }
 
+*,
+*:before,
+*:after {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 @media #{$isMobile} {
     .mobile-hide {
         display: none !important;
@@ -44,6 +52,21 @@ ul {
     .desktop-hide {
         display: none !important;
     }
+}
+
+body {
+    background: url(../images/wrapper-bg.png);
+}
+
+.wrapper,
+.slides-container {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+
 }
 
 .container {
