--- a/app/styles/_slider.scss
+++ b/app/styles/_slider.scss
@@ -364,6 +364,33 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
+    &.ng-enter {
+        display: block !important;
+        top: 100%;
+    }
+    &.ng-leave,
+    &.ng-enter
+    {
+        -webkit-transition: 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+        -moz-transition: 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+        -ms-transition: 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+        -o-transition: 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+        transition: 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    }
+
+    &.ng-leave {
+        top: 100%;
+        &.ng-leave-active {
+            top: 0;
+        }
+    }
+
+    &.ng-enter {
+        top: 0;
+        &.ng-enter-active{
+            top: -100%;
+        }
+    }
 }
 .venues {
     position: absolute;
