new opening change routing reorganized folders etc

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,6 +9,8 @@
 @import "slider";
 @import "intro";
 @import "nav";
+@import "../modules/city/city";
+@import "../modules/venue/venue";
 
 /* Here we import all jebane sass files */
 
