--- a/app/styles/_slider.scss
+++ b/app/styles/_slider.scss
@@ -382,6 +382,7 @@ body {
         top: 100%;
         &.ng-leave-active {
             top: 0;
+            opacity: 1;
         }
     }
 
@@ -443,31 +444,70 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
+    header {
+        position: relative;
+    }
     &.ng-hide {
         display: block !important;
         left: 100%;
+        header {
+            opacity: 0;
+            top: 100%;
+        }
     }
     &.ng-hide-remove,
     &.ng-hide-add
     {
-        -webkit-transition: 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-        -moz-transition: 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-        -ms-transition: 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-        -o-transition: 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-        transition: 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            -webkit-transition: 600ms cubic-bezier(1,-.01,.83,.67) all;
+            -moz-transition: 600ms cubic-bezier(1,-.01,.83,.67) all;
+            -ms-transition: 600ms cubic-bezier(1,-.01,.83,.67) all;
+            -o-transition: 600ms cubic-bezier(1,-.01,.83,.67) all;
+            transition: 600ms cubic-bezier(1,-.01,.83,.67) all;
+        header {
+            -webkit-transition: 1000ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            -moz-transition: 1000ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            -ms-transition: 1000ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            -o-transition: 1000ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            transition: 1000ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+        }
+    }
+    &.ng-hide-add {
+        header {
+            -webkit-transition: 100ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            -moz-transition: 100ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            -ms-transition: 100ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            -o-transition: 100ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            transition: 100ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+        }
     }
 
     &.ng-hide-remove {
         left: 100%;
+        header {
+            opacity: 0;
+            top: 100%;
+        }
         &.ng-hide-remove-active {
             left: 0;
+            header {
+                opacity: .8;
+                top: 0;
+            }
         }
     }
 
     &.ng-hide-add {
         left: 0;
+        header {
+            opacity: .8;
+            top: 0;
+        }
         &.ng-hide-add-active{
             left: -100%;
+            header {
+                opacity: 0;
+                top: 100%;
+            }
         }
     }
 }
